--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "Serhii Hult",
   "license": "ISC",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "node-sass": "^7.0.0",
     "parcel": "^2.0.1",
     "parcel-bundler": "^1.9.4",
