--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "plantin---test",
   "version": "1.0.0",
   "description": "PlantIn blog",
-  "main": "index.js",
+  "main": "dist/index.html",
+  "homepage": "https://PinkyWolf.github.io/PlantIn---test",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html --no-minify --public-url ./"
+    "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
+    "prebuild": "shx rm -rf dist/*",
+    "build": "parcel build ./src/index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PinkyWolf/PlantIn---test.git"
   },
   "author": "Serhii Hult",
   "license": "ISC",
@@ -16,6 +24,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "gh-pages": "^3.2.3",
     "node-sass": "^7.0.0",
     "parcel": "^2.0.1",
     "parcel-bundler": "^1.9.4",
@@ -24,7 +33,9 @@
     "sass": "^1.32.8"
   },
   "dependencies": {
+    "handlebars": "^4.7.7",
     "infinite-scroll": "^4.0.1",
+    "shx": "^0.3.3",
     "template": "^0.17.5"
   }
 }
