--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "plantin---test",
   "version": "1.0.0",
   "description": "PlantIn blog",
-  "main": "dist/index.html",
-  "homepage": "https://PinkyWolf.github.io/PlantIn---test",
+  "main": "index.js",
   "scripts": {
     "start": "parcel ./src/index.html",
     "build-dev": "parcel build ./src/index.html --no-minify --public-url ./",
